--- a/WeatherApp/WeatherApp/EmpowermentPage.xaml
+++ b/WeatherApp/WeatherApp/EmpowermentPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WeatherApp.WeatherPage"
-             Title="Sample Weather App">
+             x:Class="EmpowermentApp.EmpowermentPage"
+             Title="Empowerment App">
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -48,7 +48,7 @@
                    BackgroundColor="DarkGray"
                    TextColor="White" />
 
-            <Button x:Name="getWeatherBtn" Text="Get Weather"
+            <Button x:Name="getEmpowermentBtn" Text="Get Empowerment"
                     Grid.Row="1" Grid.Column="2"
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
@@ -56,7 +56,7 @@
                     BorderColor="White"
                     BackgroundColor="DarkGray"
                     TextColor="White"
-                    Clicked="GetWeatherBtn_Clicked" />
+                    Clicked="GetEmpowermentBtn_Clicked" />
         </Grid>
 
         <ScrollView VerticalOptions="FillAndExpand">
