--- a/WeatherApp/WeatherApp/MainPage.xaml
+++ b/WeatherApp/WeatherApp/MainPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:WeatherApp"
-             x:Class="WeatherApp.MainPage">
+             xmlns:local="clr-namespace:EmpowermentApp"
+             x:Class="EmpowermentApp.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
-    	<Label Text="Welcome to Xamarin.Forms!" 
+    	<Label Text="Welcome!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
     </StackLayout>
